syntax = "proto3";

option go_package = "/pkg/genproto/assets";

package assets;

service AssetsService {
    rpc CreateAssets(CreateAssetsRequest) returns (CreateAssetsResponse) {}
    rpc ReadAssets(ReadAssetsRequest) returns (ReadAssetsResponse) {}
}

message Asset {
    string symbol = 1;
}

message CreateAssetsRequest {
    repeated Asset assets = 1;
}

message CreateAssetsResponse {}

message ReadAssetsRequest {
    repeated string symbols = 1;
}

message ReadAssetsResponse {
    repeated Asset assets = 1;
}